force-app/main/default/objects/ShipToAddress__c/ShipToAddress__c.object-meta.xml
<CustomObject>
    <label>Ship-to-Address</label>
    <nameField>
        <label>Ship-to-Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ship-to-Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>