force-app/main/default/objects/ShipToAddress__c/fields/E_Mail__c.field-meta.xml
<CustomField>
    <fullName>E_Mail__c</fullName>
    <label>E-Mail</label>
    <type>Email</type>
</CustomField>